# makanlah-platform

./: .checkov.yaml  .gitattributes  .gitignore  AWS_CAREER_PROJECT_HANDOFF.md  Makefile  README.md  docker-compose.yml
.github/workflows/: bootstrap-check.yml  ci.yml  deploy.yml  infra-apply.yml  infra-plan.yml  security.yml
deploy/k8s-local/: 00-namespace.yaml  10-dynamodb-local.yaml  11-elasticmq.yaml  20-init-tables-job.yaml  30-menu-service.yaml  31-order-service.yaml  32-notify-worker.yaml  README.md
deploy/local/: elasticmq.conf
docs/: cost.md  runbook.md
docs/decisions/: ADR-002-dynamodb-over-rds.md  ADR-003-single-nat-plus-vpc-endpoints.md  ADR-006-region-selection.md
docs/demo/: phase2-dev-run.md  phase3-cicd-run.md  phase4-load-and-chaos.md  phase5-eks-run.md
infra/bootstrap/: README.md  backend.tf  ci-roles.tf  oidc.tf  outputs.tf  state-bucket.tf  variables.tf  versions.tf
load/k6/: order-flow.js
scripts/: aws-audit.sh  demo-eks.sh  demo-order.sh  nuke-eks.sh
services/menu-service/: Dockerfile  README.md  pyproject.toml
services/menu-service/app/: config.py  db.py  logging_setup.py  main.py  models.py
services/menu-service/app/routers/: health.py  stalls.py
services/menu-service/tests/: conftest.py  test_health.py  test_menu_items.py  test_stalls.py
services/notify-worker/: .dockerignore  Dockerfile  README.md  pyproject.toml
services/notify-worker/tests/: conftest.py  test_config_and_logging.py  test_consumer.py
services/notify-worker/worker/: config.py  consumer.py  logging_setup.py  main.py
services/order-service/: .dockerignore  Dockerfile  README.md  eslint.config.js  (+2 more)
(+60 files in other folders)
