[project]
name = "notify-worker"
version = "0.1.0"
description = "MakanLah notify-worker: SQS consumer that sends (simulated) order notifications"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.34,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-cov>=5",
    "moto[sqs]>=5,<6",
    "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["worker"]

[tool.pytest.ini_options]
addopts = "-q --cov=worker --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]

[tool.coverage.run]
omit = ["worker/main.py"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
